--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@rails/ujs": "^6.1.7",
     "abortcontroller-polyfill": "^1.7.5",
     "array-includes": "^3.1.6",
-    "atrament": "0.2.4",
     "arrow-key-navigation": "^1.2.0",
+    "atrament": "0.2.4",
     "autoprefixer": "^9.8.8",
     "axios": "^1.1.3",
     "babel-loader": "^8.2.5",
@@ -100,6 +100,7 @@
     "react-immutable-proptypes": "^2.2.0",
     "react-immutable-pure-component": "^2.2.2",
     "react-intl": "^2.9.0",
+    "react-json-view": "^1.21.3",
     "react-motion": "^0.5.2",
     "react-notification": "^6.8.5",
     "react-overlays": "^0.9.3",
